--- a/src/components/molecules/ExplorerToolbar.astro
+++ b/src/components/molecules/ExplorerToolbar.astro
@@ -23,7 +23,8 @@ import PageLimitSelect from '../atoms/PageLimitSelect.astro';
                 stroke-width="2"
                 d="M13 10V3L4 14h7v7l9-11h-7z"></path>
         </svg>
-        <span class="text-[9px] font-black text-text-muted uppercase tracking-widest">Lat:</span>
+        <span class="text-[9px] font-black text-text-muted uppercase tracking-widest">Latency:</span
+        >
         <span id="query-time" class="text-[10px] font-black text-accent font-mono min-w-[35px]"
             >0ms</span
         >
