--- a/src/components/organisms/DatabaseSidebar.astro
+++ b/src/components/organisms/DatabaseSidebar.astro
@@ -52,9 +52,10 @@ const { tables, tableStats } = Astro.props;
                 </span>
             </div>
             <span
+                id="last-sync-date"
                 class="text-[9px] text-accent/80 shrink-0 ml-2 font-mono tracking-widest font-bold"
             >
-                [SYNC]
+                [2026-02-25]
             </span>
         </button>
     </div>
